fix map height on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -226,4 +226,7 @@ span {
     display: block;
     margin: auto;
   }
+  #map {
+    height: 250px;
+  }
 }
